--- a/time-tracker.html
+++ b/time-tracker.html
@@ -1,18 +1,9 @@
 <!DOCTYPE html>
-<!--
-Created using JS Bin
-http://jsbin.com
-
-Copyright (c) 2025 by anonymous (http://jsbin.com/daxefifuce/1/edit)
-
-Released under the MIT license: http://jsbin.mit-license.org
--->
-<meta name="robots" content="noindex">
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Data Annotation Time Tracker</title>
+    <title>DA Time Tracker</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script async defer src="https://apis.google.com/js/api.js" onload="gapiLoaded()"></script>
     <script async defer src="https://accounts.google.com/gsi/client" onload="gisLoaded()"></script>
@@ -83,7 +74,7 @@ Released under the MIT license: http://jsbin.mit-license.org
         // 4. Create "OAuth 2.0 Client IDs", select "Web application".
         // 5. Under "Authorized JavaScript origins", add the URL where you'll host this (e.g., http://localhost, https://your-github-username.github.io). For local testing, you can add `http://localhost` and `http://127.0.0.1`.
         // 6. Copy the Client ID and paste it below.
-        const CLIENT_ID = 'YOUR_CLIENT_ID'; // <-- PASTE YOUR CLIENT ID HERE
+        const CLIENT_ID = '933606932845-in28nuifari6nm10bujqgvrcllarc41b.apps.googleusercontent.com'; // <-- PASTE YOUR CLIENT ID HERE
 
         // The API key is not strictly necessary for OAuth but can be useful for certain unauthenticated calls.
         // It's recommended to create one in the same "Credentials" page.
@@ -334,3 +325,4 @@ Released under the MIT license: http://jsbin.mit-license.org
     </script>
 </body>
 </html>
+
