--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <meta name="theme-color" content="#4f46e5">
 
     <script src="https://cdn.tailwindcss.com"></script>
-    <script async defer src="https://apis.google.com/js/api.js" onload="gapiLoaded()"></script>
     <script async defer src="https://accounts.google.com/gsi/client" onload="gisLoaded()"></script>
+    <script async defer src="https://apis.google.com/js/api.js" onload="gapiLoaded()"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <style>
         body {
@@ -118,32 +118,41 @@
             gapi.load('client', initializeGapiClient);
         }
 
-        async function initializeGapiClient() {
-            try {
-                await gapi.client.init({
-                    apiKey: API_KEY,
-                    discoveryDocs: [DISCOVERY_DOC],
-                });
-                gapiInited = true;
-                maybeEnableButtons();
-            } catch (error) {
-                console.error("Error initializing GAPI client", error);
-                showMessage("Could not initialize Google API. Check console.");
-            }
+        function gisLoaded() {
+            tokenClient = google.accounts.oauth2.initTokenClient({
+                client_id: CLIENT_ID,
+                scope: SCOPES,
+                callback: (tokenResponse) => {
+                    if (tokenResponse.error) {
+                        throw (tokenResponse);
+                    }
+                    // **NEW:** After successful auth, immediately load the calendar API
+                    loadCalendarApi().then(() => {
+                        updateUI(true);
+                    });
+                },
+            });
+            gisInited = true;
+            maybeEnableButtons();
         }
 
-        function gisLoaded() {
+        async function initializeGapiClient() {
+            await gapi.client.init({
+                apiKey: API_KEY,
+                discoveryDocs: [DISCOVERY_DOC],
+            });
+            gapiInited = true;
+            maybeEnableButtons();
+        }
+
+        // **NEW FUNCTION** This is the core of the fix. It's now a standalone function.
+        async function loadCalendarApi() {
             try {
-                tokenClient = google.accounts.oauth2.initTokenClient({
-                    client_id: CLIENT_ID,
-                    scope: SCOPES,
-                    callback: '', // Will be set later
-                });
-                gisInited = true;
-                maybeEnableButtons();
+                await gapi.client.load('calendar', 'v3');
+                console.log("Calendar client loaded successfully.");
             } catch (error) {
-                console.error("Error initializing GIS client", error);
-                showMessage("Could not initialize Google Sign-In. Check console.");
+                console.error("Error loading calendar client", error);
+                showMessage("Failed to load Google Calendar API.");
             }
         }
 
@@ -159,19 +168,11 @@
         signoutButton.onclick = handleSignoutClick;
 
         function handleAuthClick() {
-            tokenClient.callback = (tokenResponse) => {
-                if (tokenResponse.error) {
-                    throw (tokenResponse);
-                }
-                // No action needed here, the token is now stored.
-                // We will check for it and use it when we need it.
-                console.log("Authorization successful.");
-                updateUI(true);
-            };
-
             if (gapi.client.getToken() === null) {
+                // Prompt the user to select an account and grant access.
                 tokenClient.requestAccessToken({ prompt: 'consent' });
             } else {
+                // Skip display of account chooser and grant consent dialog.
                 tokenClient.requestAccessToken({ prompt: '' });
             }
         }
@@ -237,9 +238,8 @@
             clockOutBtn.textContent = 'Saving...';
 
             try {
-                // **NEW ROBUST APPROACH**
-                // This function now ensures we have a valid token right before we need it.
-                await ensureGapiClientReady();
+                // **REMOVED** The check is now part of the authorization flow.
+                // await ensureGapiClientReady(); 
                 await createCalendarEvent(startTime, endTime, projectName, durationMs);
                 showMessage(`Event created for "${projectName}"!`);
             } catch (error) {
@@ -249,19 +249,6 @@
             } finally {
                 clockOutBtn.textContent = 'Clock Out';
                 resetState();
-            }
-        }
-        
-        // **NEW FUNCTION** This is the core of the fix.
-        // It checks if the calendar API is loaded and ready. If not, it loads it.
-        async function ensureGapiClientReady() {
-            // Check if the calendar client library is already loaded.
-            if (!gapi.client.calendar) {
-                console.log("Calendar client not loaded. Loading now...");
-                await gapi.client.load('calendar', 'v3');
-                console.log("Calendar client loaded successfully.");
-            } else {
-                console.log("Calendar client was already loaded.");
             }
         }
 
