--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     <title>DA Time Tracker</title>
     
     <script src="https://cdn.tailwindcss.com"></script>
-    <script async defer src="https://accounts.google.com/gsi/client" onload="gisLoaded()"></script>
-    <script async defer src="https://apis.google.com/js/api.js" onload="gapiLoaded()"></script>
+    <!-- **FIX** Removed async/defer to force synchronous loading -->
+    <script src="https://accounts.google.com/gsi/client" onload="gisLoaded()"></script>
+    <script src="https://apis.google.com/js/api.js" onload="gapiLoaded()"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <style>
         body { font-family: 'Inter', sans-serif; }
@@ -186,7 +187,7 @@
         function startTimer(projectName) {
             startTime = new Date();
             isClockedIn = true;
-            clockInBtn.disabled = false;
+            clockInBtn.disabled = true;
             clockOutBtn.disabled = false;
             projectNameInput.disabled = true;
             statusMessage.textContent = `Clocked in for: ${projectName}`;
