--- a/index.html
+++ b/index.html
@@ -394,6 +394,11 @@
         }
 
         function saveEditedEvent() {
+            if (!gapiInited || !gisInited || !tokenClient) {
+                showMessage("Google services are not ready. Please wait a moment and try again.");
+                return;
+            }
+
             editTimeModal.classList.add('hidden');
             clockOutBtn.disabled = true;
             clockOutBtn.textContent = 'Authorizing...';
@@ -461,6 +466,9 @@
         }
 
         async function createCalendarEvent(start, end, project, workedMs, emoji) {
+             if (!gapi.client.calendar) {
+                 await gapi.client.load('calendar', 'v3');
+            }
             const totalMinutes = Math.floor(workedMs / 60000);
             const hours = Math.floor(totalMinutes / 60);
             const minutes = totalMinutes % 60;
