--- a/index.html
+++ b/index.html
@@ -61,7 +61,6 @@
                     },
                 });
                 gisInited = true;
-                checkApiReady();
             } catch (e) {
                 console.error("Error initializing GIS:", e);
                 showMessage("Error: Could not initialize Google Sign-In.");
@@ -71,20 +70,9 @@
             try {
                 await gapi.client.init({ apiKey: API_KEY, discoveryDocs: [DISCOVERY_DOC] });
                 gapiInited = true;
-                checkApiReady();
             } catch (e) {
                 console.error("Error initializing GAPI:", e);
                 showMessage("Error: Could not initialize Google API client.");
-            }
-        }
-        // **THE FIX**: This function ensures the app is ready before the user can start.
-        function checkApiReady() {
-            if (gapiInited && gisInited) {
-                const clockInBtn = document.getElementById('clock-in-btn');
-                if (clockInBtn) {
-                    clockInBtn.disabled = false;
-                    clockInBtn.textContent = 'Clock In';
-                }
             }
         }
     </script>
@@ -121,7 +109,7 @@
                 <p id="status-message" class="text-slate-500 dark:text-slate-400 mt-2">Ready to clock in.</p>
             </div>
             <div class="grid grid-cols-2 gap-4 mb-4">
-                <button id="clock-in-btn" class="w-full bg-green-500 hover:bg-green-600 text-white font-bold py-3 px-4 rounded-lg transition" disabled>Initializing...</button>
+                <button id="clock-in-btn" class="w-full bg-green-500 hover:bg-green-600 text-white font-bold py-3 px-4 rounded-lg transition">Clock In</button>
                 <button id="clock-out-btn" disabled class="w-full bg-red-500 hover:bg-red-600 text-white font-bold py-3 px-4 rounded-lg disabled:bg-slate-400 dark:disabled:bg-slate-600">Clock Out</button>
             </div>
             <div class="mb-4">
@@ -389,12 +377,19 @@
             editMinutesInput.value = totalMinutes % 60;
             editTimeModal.classList.remove('hidden');
         }
+        
+        // **THE DEFINITIVE FIX**: This function now waits for the APIs to be ready if they aren't.
+        async function saveEditedEvent() {
+            // Wait for APIs to be ready before doing anything else.
+            await new Promise((resolve) => {
+                const interval = setInterval(() => {
+                    if (gapiInited && gisInited) {
+                        clearInterval(interval);
+                        resolve();
+                    }
+                }, 100);
+            });
 
-        function saveEditedEvent() {
-            if (!gapiInited || !gisInited) {
-                showMessage("Google services are still initializing. Please wait a moment and try again.");
-                return;
-            }
             editTimeModal.classList.add('hidden');
             clockOutBtn.disabled = true;
             clockOutBtn.textContent = 'Authorizing...';
